--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "dev": "vuepress dev src",
     "build": "vuepress build src"
   },
-  "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^1.8.2",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
     "vuepress": "^1.5.3",
     "vuepress-plugin-sidebar": "^0.2.1"
   },
